# Bachelor-Arbeit-KI

./: .gitignore  README.md  create_test.py
Dokument/: all_switches.tikz  applicable_1.tikz  applicable_2.tikz  applicable_initial.tikz  applicable_special.tikz  asdf.tikz  basic.tikz  bigger_environment_example_labeled.tikz  environment_example.tikz  environment_example_labeled.tikz  example_continuous.tikz  head_collision.tikz  head_collision_con.tikz  illustration_find_critical_1.tikz  illustration_find_critical_2.tikz  illustration_find_critical_2_own.tikz  inapplicable_con.tikz  inapplicable_goal.tikz  rail_type_1_3_arrow.tikz  rail_type_4_5_arrow.tikz  rail_type_7_arrow.tikz  simple_example.tikz  styles.tikzstyles  test.tikz  translate_critical.tikz  vertex_applicable_0.tikz  vertex_applicable_0_con.tikz  vertex_applicable_1_con.tikz  vertex_applicable_2_con.tikz  vertex_applicable_special.tikz  vertex_inapplicable.tikz  vertex_inapplicable_con.tikz  vertex_inapplicable_special_1.tikz  vertex_inapplicable_special_1_con.tikz  vertex_usable_cn_usable_cn.tikz
cbs/: CMakeLists.txt  cbs.cpp  cbs.hpp  cbs_new_backup.cpp  cbs_new_backup.hpp
cbs/include/libMultiRobotPlanning/: a_star.hpp  cbs.hpp
cbs/old_files/: a_star.hpp  buggy_cbs.cpp
checkpoints/: single-0.pth  single-100.pth  single-200.pth  single-300.pth  single-400.pth
first_steps/: Makefile  first_steps.ipynb  first_steps_cbs.ipynb  first_steps_mapf.ipynb  first_steps_pp.ipynb  first_steps_pp_steps.ipynb  first_steps_without_libary.ipynb  grid.txt  grid_actions.yaml  out.yaml  output.yaml  replan.yaml  save.p  searchGraph.dot  test.yaml  tester.yaml  tmp.py  tmp2.py  tmp3.py
own_cbs/: CMakeLists.txt  main.cpp  test.cpp
own_cbs/include/: a_star.hpp  agent.hpp  cbs.cpp  cbs.hpp  cbs_functions.hpp  constraint.hpp  flatland.hpp  main_includes.hpp  neighbor.hpp  planresult.hpp  test.hpp  useful.cpp
pushes/: asdf.yaml  grid.txt  grid_actions.yaml  main.py  main_cbs.py  out.yaml  output.yaml  replan.yaml  tmp.txt
test_results-MAPF/: get_data_mapf.sh  illustrate_all.sh  tmp0.txt  tmp1.txt  (+41 more)
(+7705 files in other folders)
